--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-W -Wall -Wextra -g")
 
-add_executable(sha256 src/sha.cpp)
+add_executable(sha src/sha.cpp)
 
-target_include_directories(sha256
+target_include_directories(sha
 PRIVATE
   /opt/homebrew/include
 )
 
-target_link_libraries(sha256
+target_link_libraries(sha
   -L/opt/homebrew/lib
   ssl crypto
 )
